--- a/Laba1/Views/AdressDepartments/Index.cshtml
+++ b/Laba1/Views/AdressDepartments/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Laba1.Models.AdressDepartment>
-
+<link rel="stylesheet" href="~/css/styleAdressDepartmentIndex.css" />
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,10 +9,12 @@
 {
    
 
-<h1>Адреса отделов</h1>
-  @if (User.IsInRole("admin"))
+    <h3 style="text-align:center;">Адреса отделов</h3>
+
+    <hr style="width:100px; margin: auto;" />
+  @if (User.IsInRole("multiAdmin"))
                 {
-<p>
+        <p style="text-align:center;">
     <a asp-action="Create">Добавить адрес</a>
     </p>
 }
@@ -20,48 +22,49 @@ else
 {
     
 }
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Street)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.House)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Street)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.House)
-            </td>
-                @if (User.IsInRole("admin"))
-                {
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
-            </td>
-                }
-                else{
-                   
-                }
-        </tr>
-}
-    </tbody>
-</table>
+    <div class="middle">
+        @foreach (var item in Model)
+        {
+            <a asp-action="Details" asp-route-id="@item.Id" class="boxDepLink">
+                <div class="boxAdressDepartment">
+
+                    <div class="descriptionAdressDepartment">
+
+                        <div style="display:inline-block; width:200px;">
+                            <div class="city">Населенный пункт: <br> @item.City</div>
+                          
+                        </div>
+
+                        <div style="display:inline-block; width:200px;">
+                            <div class="street">Улица: <br> @item.Street</div>
+                            
+                        </div>
+
+
+                        <div style="display:inline-block; width:150px;">
+                            <div class="house">Дом: <br> @item.House</div>
+                            
+                        </div>
+
+
+
+
+
+
+                        @if (User.IsInRole("multiAdmin"))
+                        {
+                            <div style="display:inline-block;">
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary" style="margin-top:-30px">Изменить</a>
+                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger" style="margin-top:-30px">Удалить</a>
+                            </div>
+                        }
+
+                    </div>
+
+                </div>
+            </a>
+        }
+    </div>
 }
 else{
     <div class="text-center">
