--- a/Laba1/Views/DepartmentsAndPostsOfWorkers/Details.cshtml
+++ b/Laba1/Views/DepartmentsAndPostsOfWorkers/Details.cshtml
@@ -32,6 +32,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Изменить</a> |
-    <a asp-controller="Workers" asp-action="Intelligence" asp-route-id="@Model.WorkerId">Вернуться назад</a>
+    @if(User.IsInRole("admin") || User.IsInRole("megaAdmin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Изменить</a> <span> | </span>
+    }
+    
+    <a asp-controller="Departments" asp-action="Details" asp-route-id="@Model.DepartmentId">Вернуться назад</a>
 </div>
