--- a/Laba1/Views/AdressDepartments/Details.cshtml
+++ b/Laba1/Views/AdressDepartments/Details.cshtml
@@ -32,6 +32,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Изменить</a> |
+    @if (User.IsInRole("multiAdmin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Изменить</a> <span> | </span>
+    }
     <a asp-action="Index">Вернуться назад</a>
 </div>
