--- a/Laba1/Views/Departments/Details.cshtml
+++ b/Laba1/Views/Departments/Details.cshtml
@@ -28,56 +28,60 @@
             }
             catch (Exception ex)
             {
-               
+
             }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.department.Phone)
         </dt>
         <dd class = "col-sm-10">
-               @try
+            @try
             {
                 @Html.DisplayFor(model => model.department.Phone)
             }
             catch (Exception ex)
             {
-                
+
             }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.department.idAdressDepartment)
         </dt>
-       
+
     </dl>
 </div>
 
 <div id="map" style="width:600px; height:250px;"></div>
 
-            <script type="text/javascript">
-                function init() {
-                    var myMap = new ymaps.Map('map', {
-                        center: [55.74, 37.58],
-                        zoom: 13,
-                        controls: []
-                    });
+<script type="text/javascript">
+    function init() {
+    var myMap = new ymaps.Map('map', {
+    center: [55.74, 37.58],
+    zoom: 13,
+    controls: []
+    });
 
 
-                    var searchControl = new ymaps.control.SearchControl({
-                        options: {
-                            provider: 'yandex#search'
-                        }
-                    });
+    var searchControl = new ymaps.control.SearchControl({
+    options: {
+    provider: 'yandex#search'
+    }
+    });
 
-                    myMap.controls.add(searchControl);
+    myMap.controls.add(searchControl);
 
 
-                    searchControl.search('@Html.Raw(address)');
-                }
+    searchControl.search('@Html.Raw(address)');
+    }
 
-                ymaps.ready(init);
-            </script>
+    ymaps.ready(init);
+</script>
 <div>
-    <a asp-action="Edit" asp-route-id="@ViewBag.DepId">Изменить</a> |
+    @if (User.IsInRole("multiAdmin"))
+    {
+        <a asp-action="Edit" asp-route-id="@ViewBag.DepId">Изменить</a> <span> | </span>
+    }
+    
     <a asp-action="Index">Вернуться назад</a>
 </div>
 <br />
@@ -90,7 +94,11 @@
             </td>
             <td>
                 <h5>
-                    <a asp-action="AddWorker" asp-route-id="@ViewBag.DepId">   Добавить сотрудника</a> |
+                    @if (User.IsInRole("multiAdmin") || User.IsInRole("admin"))
+                    {
+                        <a asp-action="AddWorker" asp-route-id="@ViewBag.DepId">   Добавить сотрудника</a>
+                    }
+                    
                 </h5>
             </td>
         </tr>
@@ -104,7 +112,7 @@
                 Сотрудник
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.departmentsAndPostsOfWorkers.First().Post.Title)
+                Должность
             </th>
 
             <th></th>
@@ -116,27 +124,34 @@
 
             <tr>
                 <td>
-                    @item.Worker.Surname  @item.Worker.Name  @item.Worker.Middlename
+                    
+                    <a asp-controller="Workers" asp-action="Intelligence" asp-route-id="@item.WorkerId">
+                        @item.Worker.Surname  @item.Worker.Name  @item.Worker.Middlename
+                    </a>
+                   
                 </td>
                 <td>
                     @item.Post.Title
                 </td>
 
-                @if (User.IsInRole("admin"))
-                {
+            
 
                     <td>
-                        <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
-                        <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
-                        <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                    @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                    {
+                        <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> <span> | </span>
+                    }
+                   
+                        <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Details" asp-route-id="@item.Id">Подробнее</a>
+
+                    @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                    {
+                      <span> | </span>  <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Delete" asp-route-id="@item.Id">Удалить из отдела</a>
+                    }
                     </td>
 
 
-                }
-                else
-                {
-
-                }
+              
             </tr>
 
         }
