--- a/Laba1/Views/DepartmentsAndPostsOfWorkers/AddDepartment.cshtml
+++ b/Laba1/Views/DepartmentsAndPostsOfWorkers/AddDepartment.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (User.IsInRole("admin") || User.IsInRole("coach") || User.IsInRole("guest"))
+@if (User.IsInRole("admin") || User.IsInRole("coach") || User.IsInRole("guest") || User.IsInRole("multiAdmin"))
 {
 
 
@@ -56,7 +56,7 @@
                         @Html.DisplayFor(modelItem => item.AdressDepartment.Street)
                         @Html.DisplayFor(modelItem => item.AdressDepartment.House)
                     </td>
-                    @if (User.IsInRole("admin"))
+                    @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
                     {
                         <td>
                             <form asp-action="AddDepartment">
