--- a/Laba1/Views/Posts/Details.cshtml
+++ b/Laba1/Views/Posts/Details.cshtml
@@ -25,7 +25,7 @@
         </dd>
     </dl>
 </div>
-@if (User.IsInRole("admin"))
+@if (User.IsInRole("multiAdmin"))
                 {
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Изменить</a> |
