--- a/Laba1/Views/Workers/Intelligence.cshtml
+++ b/Laba1/Views/Workers/Intelligence.cshtml
@@ -167,14 +167,17 @@
 </div>
 
 
-   
+@if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+{
+    <a style="text-decoration:none" asp-action="Edit" asp-route-id="@Model?.worker.Id">
+        <div class="editButton">
 
-        <a style="text-decoration:none" asp-action="Edit" asp-route-id="@Model?.worker.Id">
-     <div class="editButton">
+            <p class="centered"> Изменить данные</p>
+        </div>
+    </a>
+}
 
-                <p class="centered"> Изменить данные</p>
-    </div>
-        </a>
+     
 
 
         <div class="boxDescWorker">
@@ -204,7 +207,12 @@
                   
                     <td>
                         <h5>
-                            <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="AddDepartment" asp-route-id="@Model?.worker.Id">   Добавить в новый отдел</a> |
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                        {
+                            <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="AddDepartment" asp-route-id="@Model?.worker.Id"> Добавить в новый отдел</a> <span> | </span>
+
+                        }
+                        
                             <a asp-controller="Departments" asp-action="Index" asp-route-id="@Model?.worker.Id">Просмотр всех отделов </a>
                         </h5>
                     </td>
@@ -239,7 +247,7 @@
                             @Html.DisplayFor(modelItem => item.Post.Title)
                         </td>
 
-                            @if (User.IsInRole("admin"))
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
                             {
                            
                             
@@ -271,7 +279,11 @@
                     </td>
                     <td>
                         <h5>
-                            <a asp-controller="Militarys" asp-action="AddMilitary" asp-route-id="@Model?.worker.Id">   Добавить</a> |
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                        {
+                            <a asp-controller="Militarys" asp-action="AddMilitary" asp-route-id="@Model?.worker.Id">Добавить</a> <span> | </span>
+                        }
+                      
                             <a asp-controller="Militarys" asp-action="Index" asp-route-id="@Model?.worker.Id">Просмотр</a>
                         </h5>
                     </td>
@@ -333,7 +345,10 @@
                 </td>
                 <td>
                     <h5>
-                            <a asp-controller="LaborBooks" asp-action="AddLaborBook" asp-route-id="@Model?.worker.Id">   Добавить</a> |
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                        {
+                            <a asp-controller="LaborBooks" asp-action="AddLaborBook" asp-route-id="@Model?.worker.Id">   Добавить</a> <span> | </span>
+                        }
                         <a asp-controller="LaborBooks" asp-action="Index" asp-route-id="@Model?.worker.Id">Просмотр</a>
                     </h5>
                 </td>
@@ -384,7 +399,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.numberDocument)
                         </td>
-                        @if (User.IsInRole("admin"))
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
                         {
                             <td>
                                 <a asp-controller="LaborBooks" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
@@ -411,7 +426,10 @@
                     </td>
                     <td>
                         <h5>
-                            <a asp-controller="Educations" asp-action="AddEducation" asp-route-id="@Model?.worker.Id">   Добавить</a> |
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                        {
+                            <a asp-controller="Educations" asp-action="AddEducation" asp-route-id="@Model?.worker.Id">   Добавить</a> <span> | </span>
+                        }
                             <a asp-controller="Educations" asp-action="Index" asp-route-id="@Model?.worker.Id">Просмотр</a>
                         </h5>
                     </td>
@@ -456,7 +474,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.yearEnd)
                         </td>
-                        @if (User.IsInRole("admin"))
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
                         {
                             <td>
                                 <a asp-controller="Educations" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
@@ -486,7 +504,10 @@
                     </td>
                     <td>
                         <h5>
-                            <a asp-controller="Vacations" asp-action="AddVacation" asp-route-id="@Model?.worker.Id">   Добавить</a> |
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                        {
+                            <a asp-controller="Vacations" asp-action="AddVacation" asp-route-id="@Model?.worker.Id">Добавить</a> <span> | </span>
+                        }
                             <a asp-controller="Vacations" asp-action="Index" asp-route-id="@Model?.worker.Id">Просмотр</a>
                         </h5>
                     </td>
@@ -524,7 +545,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.typeVacation)
                         </td>
-                        @if (User.IsInRole("admin"))
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
                         {
                             <td>
                                 <a asp-controller="Vacations" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
@@ -551,7 +572,10 @@
                     </td>
                     <td>
                         <h5>
-                            <a asp-controller="MedicalBooks" asp-action="AddMedicalBook" asp-route-id="@Model?.worker.Id">   Добавить</a> |
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
+                        {
+                            <a asp-controller="MedicalBooks" asp-action="AddMedicalBook" asp-route-id="@Model?.worker.Id">   Добавить</a> <span> | </span>
+                        }
                             <a asp-controller="MedicalBooks" asp-action="Index" asp-route-id="@Model?.worker.Id">Просмотр</a>
                         </h5>
                     </td>
@@ -590,7 +614,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.conclusion)
                         </td>
-                        @if (User.IsInRole("admin"))
+                        @if (User.IsInRole("admin") || User.IsInRole("multiAdmin"))
                         {
                             <td>
                                 <a asp-controller="MedicalBooks" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
