--- a/Laba1/wwwroot/css/styleWorkerIndex.css
+++ b/Laba1/wwwroot/css/styleWorkerIndex.css
@@ -67,6 +67,8 @@
     height: 40px;
     background-color: white;
     border: 1px solid rgb(220,220,220);
+    width: 647px;
+    margin: 10px auto;
 }
 
 .DepWorker {
@@ -77,10 +79,21 @@
     display: inline-block;
 }
 
-    .DepWorker:hover {
-        background-color: rgb(12,83,161);
-        color: white;
-    }
+
+
+.DepWorker:hover {
+    background-color: rgb(12,83,161);
+    color: white;
+}
+
+.DepWorker1 {
+    text-align: center;
+    width: 212px;
+    height: 40px;
+    display: inline-block;
+    background-color: rgb(12,83,161);
+    color: white;
+}
 
 .searchDescWorkerAllWorkers {
     margin: 0 auto;
